[project]
name = "echowuhao"
version = "0.2.0"
description = "Personal tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "echowuhao",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
hello = "echowuhao:hello"
auto_commit = "echowuhao.auto_commit.command_line:main"

[tool.hatch.build.targets.wheel]
packages = ["echowuhao"]

[tool.uv.sources]
echowuhao = { workspace = true }

