[project]
name = "echowuhao"
version = "0.3.4"
description = "Personal tools"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
hello = "echowuhao:hello"
auto_commit = "echowuhao.auto_commit.command_line:main"

[tool.hatch.build.targets.wheel]
packages = ["echowuhao"]

[tool.uv.sources]
echowuhao = { workspace = true }

