[project]
name = "echowuhao"
version = "0.4.1"
description = "Personal tools"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openai>=1.44.1",
    "requests>=2.32.3",
    "rich>=13.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
hello = "echowuhao:hello"
auto_commit = "echowuhao.auto_commit.command_line:main"
chat = "echowuhao.chat.chat:main"
choose_model = "echowuhao.chat.choose_model:main"

[tool.hatch.build.targets.wheel]
packages = ["echowuhao"]

[tool.uv.sources]
echowuhao = { workspace = true }
